--- a/musicwithfriends/Pages/Chatroom/Create.cshtml
+++ b/musicwithfriends/Pages/Chatroom/Create.cshtml
@@ -5,12 +5,13 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Create</h2>
 
-<h4>Chatroom</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<br />
+<div class="col-md-9">
+    <div class="card-title text-center">
+        <h2>Create your chatroom.</h2>
+    </div>
+    <div class="card-body">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -24,15 +25,13 @@
                 <span asp-validation-for="Chatroom.CreatedDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <a style="float:right" class="btn btn-outline-light" asp-page="Index">Back</a>
+                <input type="submit" value="Create" class="btn btn-outline-primary" />
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-page="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
