--- a/musicwithfriends/Pages/Shared/_Layout.cshtml
+++ b/musicwithfriends/Pages/Shared/_Layout.cshtml
@@ -15,9 +15,8 @@
     </environment>
 </head>
 <body>
-
     <nav class="navbar-light fixed-top bg-light ">
-        <a class="navbar-brand text-dark col-sm-3 col-md-2" asp-page="Pages/Index" >musicwithfriends</a>
+        <a class="navbar-brand text-dark col-sm-3 col-md-2" asp-page="/Index" >musicwithfriends</a>
         @*<input class="form-control bg-light border-dark" type="text" placeholder="Search" aria-label="Search">*@
     </nav>
     <div class="container-fluid">
