--- a/musicwithfriends/Pages/Index.cshtml
+++ b/musicwithfriends/Pages/Index.cshtml
@@ -13,7 +13,7 @@
             <h3>Create a party anywhere.</h3>
         </div>
         <div class="card-body">
-            <a class="btn btn-outline-primary btn-lg" asp-page="Chatroom/Create">Create Room</a>
+            <a class="btn btn-outline-primary btn-lg" asp-page="Room/Create">Create Room</a>
 
         </div>
     </div>
