--- a/musicwithfriends/Pages/About.cshtml
+++ b/musicwithfriends/Pages/About.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
-@model AboutModel
+@using musicwithfriends.Pages
+@model musicwithfriends.Pages.AboutModel
 @{
     ViewData["Title"] = "About";
 }
