--- a/musicwithfriends/Pages/Index.cshtml
+++ b/musicwithfriends/Pages/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model IndexModel
+@model musicwithfriends.Pages.IndexModel
 @{
     ViewData["Title"] = "Home";
 }
@@ -14,7 +14,7 @@
         </div>
         <div class="card-body">
             <a class="btn btn-outline-primary btn-lg" asp-page="Room/Create">Create Room</a>
-
+            <a class="btn btn-outline-secondary btn-lg" asp-page="Room/Index">Room Index</a>
         </div>
     </div>
 </div>
