--- a/musicwithfriends/Pages/Songs/Delete.cshtml
+++ b/musicwithfriends/Pages/Songs/Delete.cshtml
@@ -19,10 +19,10 @@
             @Html.DisplayFor(model => model.Song.SongData)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Song.Title)
+            @Html.DisplayNameFor(model => model.Song.SongName)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Song.Title)
+            @Html.DisplayFor(model => model.Song.SongName)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Song.FileLocation)
