--- a/musicwithfriends/Pages/Songs/Edit.cshtml
+++ b/musicwithfriends/Pages/Songs/Edit.cshtml
@@ -20,9 +20,9 @@
                 <span asp-validation-for="Song.SongData" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Song.Title" class="control-label"></label>
-                <input asp-for="Song.Title" class="form-control" />
-                <span asp-validation-for="Song.Title" class="text-danger"></span>
+                <label asp-for="Song.SongName" class="control-label"></label>
+                <input asp-for="Song.SongName" class="form-control" />
+                <span asp-validation-for="Song.SongName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Song.FileLocation" class="control-label"></label>
