--- a/musicwithfriends/Pages/Room/Create.cshtml
+++ b/musicwithfriends/Pages/Room/Create.cshtml
@@ -1,29 +1,32 @@
 ﻿@page
+@using musicwithfriends.Pages.Room
 @model musicwithfriends.Pages.Room.CreateModel
 
 @{
     ViewData["Title"] = "Create";
 }
-
-<h2>Create</h2>
-
-<h4>Room</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </form>
+<div class="container">
+    <div class="row">
+        <div class="col-md-9">
+            <h4>Create a Room</h4>
+            <hr />
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-9">
+            <form method="post">
+                <div class="form-group">
+                    <label class="col-form-label" for="txtRoomName">Room Name: </label>
+                    <input type="text" id="txtRoomName" class="form-control" value="@Html.DisplayFor(modelItem => modelItem.roomName)" />
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-outline-primary" />
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-page="Index">Back to List</a>
-</div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+@*@section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }*@
