--- a/musicwithfriends/Pages/Shared/_Layout.cshtml
+++ b/musicwithfriends/Pages/Shared/_Layout.cshtml
@@ -3,19 +3,22 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - testWebApp</title>
-        <link rel="stylesheet" href="~/lib/bootstrap/bootstrap.css" />
-        <link rel="stylesheet" href="~/css/site.css" />
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-              asp-fallback-href="~/lib/bootstrap/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
+    <title>@ViewData["Title"] - musicwithfriends</title>
+
+    <link rel="stylesheet" href="~/lib/bootstrap/bootstrap.css" />
+    <link rel="stylesheet" href="~/css/site.css" />
+    <link href="https://vjs.zencdn.net/7.3.0/video-js.css" rel="stylesheet">
+    <script src="https://vjs.zencdn.net/7.3.0/video.js"></script>
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <nav class="navbar-light fixed-top bg-light ">
-        <a class="navbar-brand text-dark col-sm-3 col-md-2" asp-page="/Index" >musicwithfriends</a>
+        <a class="navbar-brand text-dark col-sm-3 col-md-2" asp-page="/Index">musicwithfriends</a>
     </nav>
     <div class="container-fluid">
-    
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4 ">
             <div class="pt-3 pb-2 mb-3 ">
                 @RenderBody()
@@ -23,13 +26,9 @@
         </main>
     </div>
 
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/bootstrap.js"></script>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
-    @RenderSection("Scripts", required: false)
+    @{
+        @RenderSection("scripts", required: false)
+    }
 </body>
 
 </html>
