--- a/musicwithfriends/Pages/Index.cshtml
+++ b/musicwithfriends/Pages/Index.cshtml
@@ -6,7 +6,7 @@
 <br>
 <br>
 
-<div class="col-md-9">
+<div class="col-md-9 mx-auto">
     <div class="text-center">
         <div class="card-title">
             <h1>Listen to music with friends!</h1>
