--- a/musicwithfriends/Pages/Room/Create.cshtml
+++ b/musicwithfriends/Pages/Room/Create.cshtml
@@ -6,14 +6,11 @@
     ViewData["Title"] = "Create";
 }
 <div class="container">
-    <div class="row">
-        <div class="col-md-9">
-            <h4>Create a Room</h4>
+    <br />
+    
+            <h2>Create a Room</h2>
             <hr />
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-9">
+        
             <form method="post">
                 <div class="form-group">
                     <label class="col-form-label" for="txtRoomName">Room Name: </label>
@@ -21,10 +18,11 @@
                 </div>
                 <div class="form-group">
                     <input type="submit" value="Create" class="btn btn-outline-primary" />
+                    <button style="float: right" class="btn btn-outline-light" asp-page="Room/Index">Back</button>
                 </div>
             </form>
-        </div>
-    </div>
+        
+   
 </div>
 
 @*@section Scripts {
