--- a/musicwithfriends/Pages/Room/Index.cshtml
+++ b/musicwithfriends/Pages/Room/Index.cshtml
@@ -2,24 +2,54 @@
 @model musicwithfriends.Pages.Room.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Rooms";
 }
 
-<h2>Index</h2>
 
-<p>
-    <a asp-page="Create">New Room</a>
-</p>
-<table class="table ">
+<div class="container">
+    <br />
+    <div class="row">
+        <div class="col-md"><h2>Rooms</h2></div>
+        <div class="col-md"><a class="btn btn-outline-primary" style="float: right" asp-page="Create">New Room</a></div>
+    </div>
+    <hr />
+<table class="table table-borderless table-hover">
     <tbody>
 @foreach (var item in Model.Room) {
     <tr>
         <td>@item.RoomName</td>
-        <td>
+        <td class="float-right">
             <a class="btn btn-success" asp-page="./Details" asp-route-id="@item.RoomId">Enter</a>
             <a class="btn btn-outline-danger" asp-page="./Delete" asp-route-id="@item.RoomId">Delete</a>
+            @*<button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#deleteModal">Delete</button>*@
         </td>
     </tr>
 }
     </tbody>
 </table>
+</div>
+<!-- Modal -->
+@*<div class="modal fade" id="deletemodal" tabindex="-1" role="dialog" aria-labelledby="deletemodalcentertitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="modal-title" id="examplemodalcentertitle">are you sure you want to delete?</h2>
+                <button type="button" class="close" data-dismiss="modal" aria-label="close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form method="post">
+                    <input type="hidden" asp-for="room.roomid" />
+                    <input type="submit" value="delete" class="btn btn-default" />
+                    <a asp-page="./index">back to list</a>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">close</button>
+                <button type="button" class="btn btn-danger">delete</button>
+            </div>
+        </div>
+    </div>
+</div>*@
+
