--- a/musicwithfriends/Pages/Shared/_Layout.cshtml
+++ b/musicwithfriends/Pages/Shared/_Layout.cshtml
@@ -19,8 +19,8 @@
         <a class="navbar-brand text-dark col-sm-3 col-md-2" asp-page="/Index">musicwithfriends</a>
     </nav>
     <div class="container-fluid">
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4 ">
-            <div class="pt-3 pb-2 mb-3 ">
+        <main role="main">
+            <div>
                 @RenderBody()
             </div>
         </main>
