--- a/musicwithfriends/Pages/Room/Delete.cshtml
+++ b/musicwithfriends/Pages/Room/Delete.cshtml
@@ -5,18 +5,16 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Room</h4>
+<div class="container">
+    <br />
+    <div class="text-center">
+        <h3>Are you sure you want to delete this room?</h3>
     <hr />
-    <dl class="dl-horizontal">
-    </dl>
     
-    <form method="post">
-        <input type="hidden" asp-for="Room.RoomId" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-page="./Index">Back to List</a>
-    </form>
+        <form method="post">
+            <input type="hidden" asp-for="Room.RoomId" />
+            <input type="submit" value="Delete" class="btn btn-outline-danger" />
+            <a class="btn btn-outline-light" asp-page="./Index">Back to List</a>
+        </form>
+    </div>
 </div>
